--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Windows\System32\SHELL32.dll,94
+IconResource=D:\VScode\HTML-CSS\images\css3.ico,0
 [ViewState]
 Mode=
 Vid=
